    :: [BUG+SOLVED] Related to use the function __VERIFIER_nondet_int() not for 0 or 1 but a real random int
        - There is a possibily that we have a bug in the assertions
            :: (void *)(intptr_t)(*(arr + i)) << WRONG way should be (void *)(intptr_t)((arr + i)) no derefence symbol (*)

> [FILE:svcop_simulation.py]  Removed the option -preprocess from CPAChecker execution





> [THE PROJECT] Updating readme file
> [THE PROJECT] Thinking how avoid the tool execution if we have necessary packages not installed


> [THE PROJECT] Dealing with alloc C function. The actual project status generates false positives cuz the alloc function
    :: HIP1: Adding a filed in mapping to identify what is the allocation function adopted, this way we can write a correct
            leak asssertion to.

> [THE PROJECT] Creating an analysis to improve the use of __VERIFIER_nondet_int(). E.g., in cstrncat_alloc.c
    is adopted to determine the size of array
    ::HIP1: Creating a static analysis to determine what kid of __VERIFIER_nondet_int() should be, such as:
            (1) 0 or 1 to whiles and fors, or
            (2) the array size os vars







> [THE PROJECT] TODO: install test in diferent PCs
> [THE PROJECT] Checking ESBMC cuz this apt-get install libc6-dev-i386

> [FILE:create_map.py] Otimizing the time execution of args parse. The average time is 0.5s (this maybe is high)

> [FILE:create_map.py] TODO: Analyzing print in the trace log about arrays
        :: Data: in this Decl int z[4]={2,6,1,9}; is presented in the trace z = 2; :(
            ::HIP1: Try ignore the Decl put --, and for assignments consider map this a[i]
        :: In case of dynamic arrays using malloc we have a address pointed, and is not printed in the graphml :(
        :: Q1: The bench in SVCOMP adopting arrays?


> [FILE:create_map.py] Testing option of Map2Check
> [FILE:write_graphml_output.py] Testing graphml generated and the impact of not support to returnFrom

